[package]
name = "quokka"
version = "0.1.0"
edition = "2021"

[dependencies]
volatile-register = "0.2.2"

[profile.dev]
panic = "abort"
opt-level = 1 # Enables some optimizations
debug = true  # Retain debug information
lto = false   # Link Time Optimization (disable for debugging)

[profile.release]
panic = "abort"
opt-level = 3 # Full optimizations
debug = true  # Retain debug information even in release. Manually strip this out later
lto = true    # Enables LTO

[features]

pl011 = []                        # Enables PL011 Support
system_console_pl011 = ["pl011"]  # Enables the PL011 as the system console

default = ["system_console_pl011"]
