[package]
name = "quokka"
version = "0.1.0"
edition = "2021"

[dependencies]
volatile-register = "0.2.2"

[profile.dev]
panic = "abort"
opt-level = 1 # Enables some optimizations
debug = true  # Retain debug information
lto = false   # Link Time Optimization (disable for debugging)

[profile.release]
panic = "abort"
opt-level = 3 # Full optimizations
debug = true  # Retain debug information even in release. Manually strip this out later
lto = true    # Enables LTO

[features]

# UART
pl011 = []                        # Enables PL011 Support

# Architectures
arch_arm = [] # ARM32 such as ARMv7-A, which implements AArch32

# System Console
system_console_pl011 = ["pl011"]  # Enables the PL011 as the system console

# Predefined machines
qemu-system-arm_virt = ["arch_arm", "pl011"] # Targets the "virt" on qemu-system-arm

default = ["qemu-system-arm_virt","system_console_pl011" ]
